# bubba-admin

./: CMakeLists.txt  License.txt  README.md
bubba-backend/: .gitreview  AppleVolumes.default  Makefile.PL  README.md  airprint-generate  auth_template.xml  bubba-aptd  bubba-aptd.tac  bubba-easyfind.hook  bubba-easyfind.tac  bubba-igd.conf  bubba-notify.conf  bubba-run-backupjobs  bubbakey  change_distribution  cups-list-printers  cupsd.conf  davfs2.conf  dhclient.conf  dovecot.conf  firewall.conf  hostapd.conf  hosts.in  identify_box  ifplugd.conf  incron  iptables.xslt  lsb-release  minidlna.conf  new_printer_init.sh  ntp.conf  owntone.conf  personal-setting-files.txt  postfix.conf  proftpd.conf  samba-dhcp.hook  samba-dhcp3.hook  smb.conf  smbd-reload  sshd_config  (+2 more)
bubba-backend/apt/: apt.conf  excito.list  preferences  sources.list
bubba-backend/debian/: bubba-backend.b2gpt2mbr.init  bubba-backend.bubba-apt.init  bubba-backend.bubba-backup.cron.d  bubba-backend.bubba-disable-offload.init  bubba-backend.bubba-easyfind.init  bubba-backend.bubba-firewall.init  bubba-backend.bubba-notify.cron.d  bubba-backend.dirs  bubba-backend.dovecot-timefix.cron.d  bubba-backend.eth1br0-link  bubba-backend.excito-backup.cron.d  bubba-backend.ifup-br0  bubba-backend.install  bubba-backend.logrotate  bubba-backend.mtu.action  bubba-backend.multicast.action  bubba-backend.net-nomultionwan.udev  bubba-backend.postinst  bubba-backend.preinst  bubba-backend.prerm  bubba-backend.rtc.udev  bubba-backend.samba-printer-reload.udev  bubba-backend.smbrestart.init  changelog  control  dh_installudev_old  rules
bubba-backend/default_web/: ie6.css  index.html  screen.css
bubba-backend/default_web/js/: jquery.flow.1.1.js
bubba-backend/dhclient-fallback/: fallback  firewall_rewrite
bubba-backend/doc/: changelog
bubba-backend/notifiers/: led.pl  ui.pl
bubba-backend/scripts/: update.py
bubba-backend/services/: pim.service
bubba-backend/test/: notify-gen
bubba-backend/web-admin/: MANIFEST  MANIFEST.skip  Makefile.PL
bubba-backend/web-admin/lib/: Bubba.pm
bubba-diskmanager/: CmdApp.cpp  CmdApp.h  CmdDevs.cpp  CmdDevs.h  CmdLV.cpp  CmdLV.h  CmdMD.cpp  CmdMD.h  DiskCmd.cpp  DiskCmd.h  DiskUtils.cpp  DiskUtils.h  Disks.cpp  Disks.h  FsTabCmd.cpp  FsTabCmd.h  LVM.cpp  LVM.h  Makefile  RaidDevs.cpp  RaidDevs.h  StatusNotifier.cpp  StatusNotifier.h  UserMount.cpp  UserMount.h  UserUmount.cpp  UserUmount.h  Utils.cpp  Utils.h  parse.cpp
bubba-diskmanager/debian/: changelog  control  copyright  rules
bubba-diskmanager/doc/: changelog
bubba-frontend/: .gitreview  Makefile  apache.site  lighttpd.conf  lite_php_browscap.ini  php-apache.conf  php-cgi.conf  php5-wrapper  po4a.conf
bubba-frontend/admin/: index.php
bubba-frontend/admin/config/: autoload.php  browser_cap.php  config.php
bubba-frontend/admin/controllers/: Ajax_album.php  Ajax_backup.php  Ajax_disk.php  Ajax_network.php  Ajax_notify.php  Ajax_session.php  Ajax_settings.php  Ajax_status.php  Ajax_upload.php  Album.php  Backup.php  Disk.php  Downloads.php  Filemanager.php  Help.php  Image.php  Login.php  Logout.php  Mail.php  Music.php  Mycontroller.php  Network.php  Services.php  Settings.php  Shutdown.php  Stat.php  Upload.php  Users.php  Wizard.php  ajax_album.php  ajax_backup.php  ajax_disk.php  ajax_network.php  ajax_notify.php  ajax_oldbackup.php  ajax_session.php  ajax_settings.php  ajax_status.php  ajax_upload.php  album.php  (+19 more)
bubba-frontend/admin/helpers/: bubba_socket_helper.php  content_disposition_helper.php  exec_helper.php  ini_helper.php  network_helper.php
bubba-frontend/admin/legacy/: defines.php  user_auth.php
bubba-frontend/admin/libraries/: Browscap_raw.php  Session.php  Spyc.php  firephp_fake.php  gettext.php
bubba-frontend/admin/models/: Networkmanager.php  Notify.php  System.php  album_model.php  auth_model.php  backup.php  disk_model.php  menu.php  networkmanager.php  notify.php  oldbackup.php  system.php
bubba-frontend/debian/: bubba-frontend.dirs  bubba-frontend.install  bubba-frontend.postinst  changelog  control
bubba-frontend/doc/: changelog
bubba-frontend/po/help/: backup.html.pot  network_tor.html.pot  settings.html.pot  settings_identity.html.pot  settings_remote_accounts.html.pot  settings_software.html.pot  user_album_albums.html.pot  user_downloads.html.pot  users.html.pot
bubba-frontend/po/js/: POTFILES  bubba.pot  de.po  es.po  sv.po
bubba-networkmanager/: Dispatcher.cpp  Dispatcher.h  Makefile  client.cpp  main.cpp  tz-lc.txt
bubba-networkmanager/controllers/: InterfaceController.cpp  InterfaceController.h  PolicyController.cpp  PolicyController.h  WlanController.cpp  WlanController.h
bubba-networkmanager/datamodel/: BridgeInterface.cpp  BridgeInterface.h  Configuration.cpp  Configuration.h  EthernetInterface.cpp  EthernetInterface.h  Interface.cpp  Interface.h  Profile.h  WlanInterface.cpp  WlanInterface.h
bubba-networkmanager/debian/: changelog  control  copyright  dirs  examples  install  rules
bubba-networkmanager/dhcp-ping/: dhcp.cpp  dhcp.h  main.cpp
bubba-networkmanager/doc/: changelog
bubba-networkmanager/examplecfg/: hostapd.conf  interfaces  interfaces.ex1  interfaces.nobr  interfaces.sav  nmconfig
bubba-networkmanager/scripts/: client.py
bubba-networkmanager/utils/: Hosts.cpp  Hosts.h  InterfacesCfg.cpp  InterfacesCfg.h  JsonUtils.cpp  JsonUtils.h  Nl80211.cpp  Nl80211.h  Resolv.cpp  Resolv.h  Route.cpp  Route.h  Sockios.cpp  Sockios.h  SysConfig.cpp  SysConfig.h  WlanCfg.cpp  WlanCfg.h
contrib/dhcpcd_hook_scripts/: bubba-fqdn.hook
contrib/fake_dpkg/: dpkg-query
contrib/gentoo/: bubba-adminphp.conf  bubba-adminphp.initd  bubba-firewall.confd  gentoo-logo.patch  nginx.vhost
contrib/identify_box_B3/: identify_box
contrib/netfilter/: bubba-firewall.confd  bubba-firewall.initd  bubba-firewall.sh
contrib/systemd/: bubba-adminphp.tmpfiles  bubba-firewall.sh  gnome-NetworkManager.patch  systemctl.patch
static-libs/libeutils-0.7.39/: CMakeLists.txt  changelog  libeutils.pc.cmake
static-libs/libsigc++-2.4.1/: ChangeLog  aclocal.m4
(+374 files in other folders)
